[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Scripts/Menu/SaveSlots.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Exo2Bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Scripts/Menu/LoadMenu.gd" type="Script" id=3]

[node name="LoadMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="SaveSlots" type="ItemList" parent="."]
margin_top = 99.0
margin_right = 400.0
margin_bottom = 1054.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 573.0
margin_bottom = 91.0
custom_constants/separation = 0

[node name="Load" type="Button" parent="HBoxContainer"]
margin_right = 173.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 2 )
text = "Load"

[node name="Delete" type="Button" parent="HBoxContainer"]
margin_left = 173.0
margin_right = 402.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 2 )
text = "Delete"

[node name="Back" type="Button" parent="HBoxContainer"]
margin_left = 402.0
margin_right = 574.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 2 )
text = "Back"

[connection signal="item_selected" from="SaveSlots" to="." method="_on_SaveSlots_item_selected"]
[connection signal="pressed" from="HBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="HBoxContainer/Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="HBoxContainer/Back" to="." method="_on_Back_pressed"]
